添加BuildConfig配置 桌面端打包需要将gradle.properties中的buildConfig.debug改为 true